python-test_driven_development/tests/0-add_integer.txt
>>> add_integer = __import__("0-add_integer").add_integer

>>> add_integer(31, 69)
100

>>> add_integer("hi", "girl")
  File "c:\Users\User\Documents\Codes\Holberton\Python\WorkDir\test.py", line 9, in add_integer
    raise TypeError("a must be an integer")
TypeError: a must be an integer

>>> add_integer()
Traceback (most recent call last):
  File "c:\Users\User\Documents\Codes\Holberton\Python\WorkDir\test.py", line 14, in <module>
    add_integer()
TypeError: add_integer() missing 1 required positional argument: 'a'

>>> add_integer(8.762378691696962, 5)
13

>>> add_integer()
Traceback (most recent call last):
  File "./0-add_integer.py", line 24, in <module>
    add_integer()
TypeError: add_integer() missing 1 required positional argument: 'a'

>>> add_integer(float('inf'), float('inf'))
Traceback (most recent call last):
  File "./0-add_integer.py", line 16, in add_integer
    a = int(a)
        ^^^^^^
OverflowError: cannot convert float infinity to integer

>>> add_integer(2)
100

>>> math = __import__("math")
>>> add_integer(2, math.nan)
Traceback (most recent call last):
  File "./0-add_integer.py", line 18, in add_integer
    b = int(b)
        ^^^^^^
ValueError: cannot convert float NaN to integer
